feat: Implement comprehensive Docker-native testing strategy and Pydantic v2 compatibility
🎯 Major Milestone: Complete Docker-native testing infrastructure implementation

## Strategic Resolution Plan Successfully Completed

### ✅ Docker-Native Testing Infrastructure
- Unified backend testing to run exclusively inside Docker container
- Updated pytest.ini for Docker environment variables, markers, and optimized options
- Rewrote tests/conftest.py with Docker-native fixtures:
  - Database session isolation using separate PostgreSQL schemas per test worker
  - Async and sync database session fixtures
  - FastAPI test clients with dependency overrides
  - RBAC user fixtures (super_admin, regular_admin)
  - Infrastructure mocking fixtures (mock_redis, mock_minio, mock_ansible_runner)

### ✅ Comprehensive Test Coverage (230 Tests)
- Added new test files covering:
  - RADIUS MAC authentication and device management (test_device_management.py)
  - Ansible automation system (test_automation_system.py)
  - RBAC system (test_rbac_system.py)
- Added comprehensive test runner script (scripts/run_tests.sh)
- Created detailed documentation (docs/TESTING_GUIDE.md)
- Updated requirements.txt with testing dependencies

### ✅ Pydantic v2 Compatibility Resolution
- Fixed all critical regex→pattern migrations in schemas and API endpoints:
  - app/schemas/device.py (5 fixes)
  - app/schemas/tariff.py (4 fixes)
  - app/api/v1/endpoints/devices.py (3 fixes)
  - app/api/v1/endpoints/plugin_health_monitoring.py (1 fix)
  - app/api/v1/endpoints/api_management.py (1 fix)
  - app/api/v1/endpoints/api_quota_management.py (1 fix)
- Eliminated all test collection blockers

### ✅ Import Resolution and Static Analysis
- Fixed critical import issues:
  - Administrator model path (auth.base not admin.base)
  - Added missing AccountingEntry and TaxRate exports to billing module
  - Fixed secrets and database dependency imports
- Integrated static analysis tools (ruff, isort, mypy)
- Resolved 96 undefi

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,35 +1,33 @@
 [tool:pytest]
+# Docker-native test configuration for ISP Framework
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+
+# Optimized for Docker container execution
 addopts = 
-    -v
+    -ra
+    -q
     --tb=short
     --strict-markers
     --color=yes
-    -p no:warnings
+    --disable-warnings
+    --maxfail=10
 
-markers =
-    unit: fast unit tests
-    integration: slow integration tests  
-    order: execution ordering
+# Environment variables for Docker testing
+env =
+    PYTHONPATH=/app
+    LOG_LEVEL=WARNING
+    TESTING=true
 
-filterwarnings =
-    ignore::DeprecationWarning
-    ignore::PendingDeprecationWarning
-    ignore::UserWarning:pydantic.*
-    ignore::UserWarning:pysnmp.*
-    ignore::pytest.PytestUnknownMarkWarning
-    ignore:.*unclosed.*:ResourceWarning
-
+# Test markers for selective execution
 markers =
     unit: Unit tests with no I/O dependencies
+    integration: Integration tests requiring external services (deselect with -m "not integration")
     db: Tests that require database connection
     api: FastAPI endpoint tests requiring full app startup
-    integration: Full-stack integration tests with external services
     slow: Tests that take a long time to run
-    order: Test execution order marker
     
     # Service-specific markers
     rbac: RBAC and permission tests
@@ -38,6 +36,8 @@ markers =
     customer: Customer management tests
     auth: Authentication and authorization tests
     webhook: Webhook integration tests
+    device: Device management tests
+    automation: Ansible automation tests
     
     # Infrastructure markers
     redis: Tests requiring Redis
@@ -45,8 +45,19 @@ markers =
     radius: Tests requiring FreeRADIUS
     celery: Tests requiring Celery workers
 
+# Warning filters
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+    ignore::UserWarning:pydantic.*
+    ignore::UserWarning:pysnmp.*
+    ignore::pytest.PytestUnknownMarkWarning
+    ignore:.*unclosed.*:ResourceWarning
+    ignore::sqlalchemy.exc.SAWarning
+
 # Test discovery
 minversion = 6.0
+python_paths = /app
 
 
 # Coverage configuration
