--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -68,8 +68,14 @@ pysnmp==6.2.6
 pysnmp-mibs==0.1.6
 pyasn1==0.6.1
 
-# Testing
+# Testing & Development
 pytest==7.4.4
-pytest-asyncio==0.23.3
-httpx==0.26.0
+pytest-asyncio==0.23.2
 pytest-cov==4.1.0
+pytest-mock==3.12.0
+pytest-xdist==3.5.0
+hypothesis==6.92.1
+fakeredis==2.20.1
+httpx==0.26.0
+factory-boy==3.3.0
+pytest-env==1.1.3
