--- a/.github/workflows/code-quality-audit.yml
+++ b/.github/workflows/code-quality-audit.yml
@@ -61,7 +61,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
-          pip install -r backend/requirements-dev.txt
+          if [ -f backend/requirements-dev.txt ]; then pip install -r backend/requirements-dev.txt; fi
 
       - name: Install Node.js dependencies
         run: |
