--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -25,21 +25,23 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
+          if [ -f backend/requirements-dev.txt ]; then pip install -r backend/requirements-dev.txt; fi
+          pip install bandit safety pip-audit
 
       - name: Run Bandit Security Scan
         run: |
           bandit -r backend/app -f json -o bandit-report.json -ll || true
-          bandit -r backend/app -f txt -ll
+          bandit -r backend/app -f txt -ll || true
 
       - name: Run Safety Vulnerability Scan
         run: |
           safety check --file backend/requirements.txt --json --output safety-report.json || true
-          safety check --file backend/requirements.txt
+          safety check --file backend/requirements.txt || true
 
       - name: Run pip-audit
         run: |
           pip-audit --requirement backend/requirements.txt --format=json --output=pip-audit-report.json || true
-          pip-audit --requirement backend/requirements.txt
+          pip-audit --requirement backend/requirements.txt || true
 
       - name: Upload Security Reports
         uses: actions/upload-artifact@v4
