--- a/frontend/package.json
+++ b/frontend/package.json
@@ -72,7 +72,7 @@
     "@storybook/react": "^8.0.0",
     "@storybook/test": "^8.0.0",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.7",
+    "@testing-library/react": "14.3.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.12",
