fix: resolve TOML syntax error in pyproject.toml
- Fixed per-file-ignores inline table syntax (newlines not allowed)
- Converted to proper TOML table format [tool.ruff.per-file-ignores]
- CI/CD pipeline should now pass Ruff configuration parsing

Resolves GitHub Actions workflow failure:
'newlines are unsupported in inline tables, expected nothing'

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,16 +18,15 @@ ignore = [
 ]
 
 # Per-file ignores for common patterns
-per-file-ignores = {
-    # Tests often have unused imports for fixtures/mocks
-    "tests/**/*" = ["F401", "E402", "S101"],
-    # Alembic migrations may have unused imports and missing __init__.py
-    "alembic/**/*" = ["F401", "INP001"],
-    # Migration backup directories should be excluded entirely
-    "alembic/migrations_backup_*/**/*" = ["F401", "E402", "INP001"],
-    # Conftest files often have unused imports for pytest fixtures
-    "**/conftest.py" = ["F401"],
-}
+[tool.ruff.per-file-ignores]
+# Tests often have unused imports for fixtures/mocks
+"tests/**/*" = ["F401", "E402", "S101"]
+# Alembic migrations may have unused imports and missing __init__.py
+"alembic/**/*" = ["F401", "INP001"]
+# Migration backup directories should be excluded entirely
+"alembic/migrations_backup_*/**/*" = ["F401", "E402", "INP001"]
+# Conftest files often have unused imports for pytest fixtures
+"**/conftest.py" = ["F401"]
 
 # Exclude directories that shouldn't be linted
 exclude = [
